--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,16 @@ img {
   height: auto;
   margin: 0 auto;
 }
-
+@media (max-width:460px){
+  img {
+    max-width: 100%;
+    display: block;
+  }
+}
 #img-div {
   padding: 15px;
   margin: 0;
-  border-radius: 10px;
+  border-radius: 5px;
   background: white;
 }
 #img-caption {
